<resources>
    <string name="app_name">WeightTrackerNG</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="header_weight"><u>WEIGHT (LBS)</u></string>
    <string name="header_date"><u>DATE</u></string>
    <string name="no_date">no weights to show...</string>
    <string name="no_weight">Please add records with the above button</string>
    <string name="goal_text">TARGET WEIGHT: </string>
    <string name="default_goal_weight">Default Goal Weight</string>
    <string name="button_change_target_weight">Change target weight</string>
    <string name="change_title">Edit Weight Record</string>
    <string name="change_record_prompt">PLEASE ENTER A DATE TO CHANGE</string>
    <string name="date_hint">Date (MM/DD/YYYY)</string>
    <string name="add_popup_title">Enter New Weight Record</string>
    <string name="add_record_title">Add Weight Record</string>
    <string name="targetWeight_popup_title">Change Target Weight</string>
    <string name="delete_record_title">Delete a Record</string>
    <string name="delete_record_prompt">PLEASE ENTER A DATE TO DELETE</string>
</resources>