<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pagebkg"
    tools:context=".DeleteRecordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">


            <ImageView
                android:id="@+id/image_alertBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_restore_from_trash_200" />

            <TextView
                android:id="@+id/delete_titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/delete_record_title"
                android:textColor="@color/lavender"
                android:textSize="36dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/image_alertBox" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:textAlignment="center"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/change_record_prompt" />

            <Button
                android:backgroundTint="@color/lavender"
                android:id="@+id/deleteRecord_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="deleteButtonOnClick"
                android:text="Delete"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />


            <Button
                android:backgroundTint="@color/lavender"
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="cancelButtonClick"
                android:text="Cancel"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <TextView
                android:id="@+id/change_record_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delete_record_prompt"
                android:textColor="@color/lavender"
                android:textAlignment="center"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/delete_titleTextView" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>